# Graph_Generation

./: CMakeLists.txt  main.cpp
Structures/: DynamicArray.h  HashMap.h  IConcatable.h  LinkedList.h
algorithms/: GraphColoring.h  IExecutable.h
graph/: DirectedEdge.h  Edge.h  Graph.h  IHaveWeight.h  Vertex.h
test/: test.cpp  test.h
util/: GraphRenderer.cpp  GraphRenderer.h  ImageRenderer.h  UI.cpp  UI.h
